--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -366,7 +366,7 @@ CFLAGS = $(CFLAGS) /D "XMLSEC_NO_SIZE_T"
 !if "$(WITH_LEGACY_CRYPTO)" == "1"
 CFLAGS = $(CFLAGS)
 !else
-CFLAGS = $(CFLAGS)  /D "XMLSEC_NO_MD5" /D "XMLSEC_NO_SHA1"  /D "XMLSEC_NO_DES"
+CFLAGS = $(CFLAGS)  /D "XMLSEC_NO_MD5" /D "XMLSEC_NO_RIPEMD160"
 !endif
 
 
