--- a/include/xmlsec/Makefile.am
+++ b/include/xmlsec/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 NULL =
 SUBDIRS = $(XMLSEC_CRYPTO_LIST)
-EXTRA_DIST = skeleton mscrypto $(XMLSEC_CRYPTO_DISABLED_LIST)
+EXTRA_DIST = mscrypto $(XMLSEC_CRYPTO_DISABLED_LIST)
 
 xmlsecincdir = $(includedir)/xmlsec1/xmlsec
 
@@ -57,4 +57,3 @@ remove-old-headers:
 
 install-exec-hook: remove-old-headers
 	$(mkinstalldirs) $(DESTDIR)$(xmlsecincdir)
-
