--- a/configure.ac
+++ b/configure.ac
@@ -159,7 +159,6 @@ if test "z$enable_development" = "zyes" ; then
 
     dnl legacy crypto
     enable_md5="yes"
-    enable_ripemd160="yes"
 
     AC_MSG_RESULT([yes])
 else
@@ -1879,14 +1878,14 @@ dnl ==========================================================================
 dnl See do we need RIPEMD-160 support
 dnl ==========================================================================
 AC_MSG_CHECKING(for RIPEMD-160 support)
-AC_ARG_ENABLE([ripemd160], [AS_HELP_STRING([--enable-ripemd160],[enable RIPEMD-160 support (no, deprecated)])])
-if test "z$enable_ripemd160" = "zyes" ; then
-    XMLSEC_NO_RIPEMD160="0"
-    AC_MSG_RESULT([yes (deprecated)])
-else
+AC_ARG_ENABLE([ripemd160], [AS_HELP_STRING([--enable-ripemd160],[enable RIPEMD-160 support (yes)])])
+if test "z$enable_ripemd160" = "zno" ; then
     XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_RIPEMD160=1"
     XMLSEC_NO_RIPEMD160="1"
     AC_MSG_RESULT([disabled])
+else
+    XMLSEC_NO_RIPEMD160="0"
+    AC_MSG_RESULT([yes])
 fi
 AM_CONDITIONAL(XMLSEC_NO_RIPEMD160, test "z$XMLSEC_NO_RIPEMD160" = "z1")
 AC_SUBST(XMLSEC_NO_RIPEMD160)
@@ -1895,14 +1894,14 @@ dnl ==========================================================================
 dnl See do we need SHA1 support
 dnl ==========================================================================
 AC_MSG_CHECKING(for SHA1 support)
-AC_ARG_ENABLE([sha1], [AS_HELP_STRING([--enable-sha1],[enable SHA1 support (yes, deprecated)])])
+AC_ARG_ENABLE([sha1], [AS_HELP_STRING([--enable-sha1],[enable SHA1 support (yes, use discouraged)])])
 if test "z$enable_sha1" = "zno" ; then
     XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_SHA1=1"
     XMLSEC_NO_SHA1="1"
     AC_MSG_RESULT([disabled])
 else
     XMLSEC_NO_SHA1="0"
-    AC_MSG_RESULT([yes (deprecated)])
+    AC_MSG_RESULT([yes (use discouraged)])
 fi
 AM_CONDITIONAL(XMLSEC_NO_SHA1, test "z$XMLSEC_NO_SHA1" = "z1")
 AC_SUBST(XMLSEC_NO_SHA1)
