--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -31,12 +31,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build
+          mkdir build install
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --enable-werror --enable-pedantic \
-            ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=../install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -45,6 +44,10 @@ jobs:
       working-directory: build
       run: |
           make check
+    - name: make install
+      working-directory: build
+      run: |
+          make install
 
   check-ubuntu-openssl110:
     runs-on: ubuntu-20.04
@@ -66,13 +69,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build
+          mkdir build install
     - name: configure
       working-directory: build
       run: |
           export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
-          ../autogen.sh --enable-werror --enable-pedantic \
-              ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=../install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -82,6 +84,10 @@ jobs:
       run: |
           export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
           make check
+    - name: make install
+      working-directory: build
+      run: |
+          make install
 
   check-osx:
     runs-on: macos-12
@@ -102,11 +108,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build
+          mkdir build install
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=../install  --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -115,7 +121,10 @@ jobs:
       working-directory: build
       run: |
           make check
-
+    - name: make install
+      working-directory: build
+      run: |
+          make install
 
   check-mingw:
     runs-on: windows-2022
@@ -159,14 +168,14 @@ jobs:
           git config --global core.autocrlf input
       shell: bash
     - uses: actions/checkout@v2
-    - name: create-build-dirs
+    - name: create-dirs
       run: |
-          mkdir build
+          mkdir build install
       shell: bash
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --enable-werror  --enable-pedantic \
+          ../autogen.sh --prefix=../install --enable-werror  --enable-pedantic \
               --enable-mscrypto --enable-mscng ${{ matrix.config_flags }} \
               --build="${{ matrix.arch }}-w64-mingw32" \
               --host="${{ matrix.arch }}-w64-mingw32"
@@ -178,6 +187,10 @@ jobs:
       working-directory: build
       run: |
           make check
+    - name: make install
+      working-directory: build
+      run: |
+          make install
 
   check-msvc:
     runs-on: windows-2022
