Fix install path

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -35,7 +35,7 @@ jobs:
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --prefix=../install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -74,7 +74,7 @@ jobs:
       working-directory: build
       run: |
           export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
-          ../autogen.sh --prefix=../install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -112,7 +112,7 @@ jobs:
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --prefix=../install  --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install  --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -175,7 +175,7 @@ jobs:
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --prefix=../install --enable-werror  --enable-pedantic \
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install --enable-werror  --enable-pedantic \
               --enable-mscrypto --enable-mscng ${{ matrix.config_flags }} \
               --build="${{ matrix.arch }}-w64-mingw32" \
               --host="${{ matrix.arch }}-w64-mingw32"
@@ -218,7 +218,7 @@ jobs:
             config_flags: unicode=no with-dl=no static=yes
     env:
       VISUAL_STUDIO_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise"
-      EXTRAS_FOLDER: C:\extras
+      INSTALL_FOLDER: ${GITHUB_WORKSPACE}\install
       EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
       LIBXML2_FILE: libxml2-2.9.8-noiconv-win-x64.7z
       LIBXSLT_FILE: libxslt-1.1.32-noiconv-win-x64.7z
@@ -227,10 +227,10 @@ jobs:
     steps:
     - name: create-dirs
       run: |
-          mkdir ${{ env.EXTRAS_FOLDER }}
+          mkdir ${{ env.INSTALL_FOLDER }}
     - name: install dependencies
       shell: pwsh
-      working-directory: ${{ env.EXTRAS_FOLDER }}
+      working-directory: ${{ env.INSTALL_FOLDER }}
       run: |
           Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.LIBXML2_FILE }} -O ${{ env.LIBXML2_FILE }}
           7z x ${{ env.LIBXML2_FILE }}
@@ -253,24 +253,29 @@ jobs:
       shell: cmd
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
-          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;;%PATH%
+          set PATH=${{ env.INSTALL_FOLDER }}\bin;${{ env.INSTALL_FOLDER }}\lib;;%PATH%
           cscript configure.js pedantic=yes werror=yes static=yes iconv=no ^
               crypto=${{ matrix.crypto }} ${{ matrix.config_flags }} ^
-              prefix=${{ env.EXTRAS_FOLDER }} ^
-              include=${{ env.EXTRAS_FOLDER }}\include;${{ env.EXTRAS_FOLDER }}\include\libxml2;%MSSDK_INCLUDE% ^
-              lib=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%MSSDK_LIB%
+              prefix=${{ env.INSTALL_FOLDER }} ^
+              include=${{ env.INSTALL_FOLDER }}\include;${{ env.INSTALL_FOLDER }}\include\libxml2;%MSSDK_INCLUDE% ^
+              lib=${{ env.INSTALL_FOLDER }}\bin;${{ env.INSTALL_FOLDER }}\lib;%MSSDK_LIB%
     - name: make
       working-directory: win32
       shell: cmd
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
-          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;;%PATH%
+          set PATH=${{ env.INSTALL_FOLDER }}\bin;${{ env.INSTALL_FOLDER }}\lib;;%PATH%
           nmake
     - name: make check
       working-directory: win32
       shell: cmd
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
-          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%PATH%
-          set OPENSSL_MODULES=${{ env.EXTRAS_FOLDER }}\lib\ossl-modules
+          set PATH=${{ env.INSTALL_FOLDER }}\bin;${{ env.INSTALL_FOLDER }}\lib;%PATH%
+          set OPENSSL_MODULES=${{ env.INSTALL_FOLDER }}\lib\ossl-modules
           nmake check
+    - name: make install
+      working-directory: build
+      run: |
+          nmake install
+      
