--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -31,11 +31,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build install
+          mkdir build install.dir
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -69,12 +69,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build install
+          mkdir build install.dir
     - name: configure
       working-directory: build
       run: |
           export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
-          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -108,11 +108,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build install
+          mkdir build install.dir
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install  --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir  --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
       working-directory: build
       run: |
@@ -170,12 +170,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-dirs
       run: |
-          mkdir build install
+          mkdir build install.dir
       shell: bash
     - name: configure
       working-directory: build
       run: |
-          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install --enable-werror  --enable-pedantic \
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir --enable-werror  --enable-pedantic \
               --enable-mscrypto --enable-mscng ${{ matrix.config_flags }} \
               --build="${{ matrix.arch }}-w64-mingw32" \
               --host="${{ matrix.arch }}-w64-mingw32"
@@ -218,7 +218,7 @@ jobs:
             config_flags: unicode=no with-dl=no static=yes
     env:
       VISUAL_STUDIO_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise"
-      INSTALL_FOLDER: ${GITHUB_WORKSPACE}\install
+      INSTALL_FOLDER: c:\install.dir
       EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
       LIBXML2_FILE: libxml2-2.9.8-noiconv-win-x64.7z
       LIBXSLT_FILE: libxslt-1.1.32-noiconv-win-x64.7z
