--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -276,6 +276,7 @@ jobs:
           nmake check
     - name: make install
       working-directory: win32
+      shell: cmd
       run: |
           nmake install
       
