--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -278,5 +278,6 @@ jobs:
       working-directory: win32
       shell: cmd
       run: |
+          call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
           nmake install
       
