--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -31,21 +31,21 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build install.dir
+          mkdir build.dir install.dir
     - name: configure
-      working-directory: build
+      working-directory: build.dir
       run: |
           ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
-      working-directory: build
+      working-directory: build.dir
       run: |
           make
     - name: make check
-      working-directory: build
+      working-directory: build.dir
       run: |
           make check
     - name: make install
-      working-directory: build
+      working-directory: build.dir
       run: |
           make install
 
@@ -69,23 +69,23 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build install.dir
+          mkdir build.dir install.dir
     - name: configure
-      working-directory: build
+      working-directory: build.dir
       run: |
           export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
           ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
-      working-directory: build
+      working-directory: build.dir
       run: |
           make
     - name: make check
-      working-directory: build
+      working-directory: build.dir
       run: |
           export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
           make check
     - name: make install
-      working-directory: build
+      working-directory: build.dir
       run: |
           make install
 
@@ -108,21 +108,21 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
-          mkdir build install.dir
+          mkdir build.dir install.dir
     - name: configure
-      working-directory: build
+      working-directory: build.dir
       run: |
           ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir  --enable-werror --enable-pedantic ${{ matrix.config_flags }}
     - name: make
-      working-directory: build
+      working-directory: build.dir
       run: |
           make
     - name: make check
-      working-directory: build
+      working-directory: build.dir
       run: |
           make check
     - name: make install
-      working-directory: build
+      working-directory: build.dir
       run: |
           make install
 
@@ -170,25 +170,25 @@ jobs:
     - uses: actions/checkout@v2
     - name: create-dirs
       run: |
-          mkdir build install.dir
+          mkdir build.dir install.dir
       shell: bash
     - name: configure
-      working-directory: build
+      working-directory: build.dir
       run: |
-          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir --enable-werror  --enable-pedantic \
+          ../autogen.sh --prefix=`cygpath -u "${GITHUB_WORKSPACE}/install.dir"` --enable-werror  --enable-pedantic \
               --enable-mscrypto --enable-mscng ${{ matrix.config_flags }} \
               --build="${{ matrix.arch }}-w64-mingw32" \
               --host="${{ matrix.arch }}-w64-mingw32"
     - name: make
-      working-directory: build
+      working-directory: build.dir
       run: |
           make
     - name: make check
-      working-directory: build
+      working-directory: build.dir
       run: |
           make check
     - name: make install
-      working-directory: build
+      working-directory: build.dir
       run: |
           make install
 
