--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -244,37 +244,39 @@ XMLSEC_OPENSSL_OBJS_A = \
 	$(XMLSEC_OPENSSL_INTDIR_A)\x509vfy.obj
 
 XMLSEC_NSS_OBJS = \
-	$(XMLSEC_NSS_INTDIR)\app.obj\
+	$(XMLSEC_NSS_INTDIR)\app.obj \
 	$(XMLSEC_NSS_INTDIR)\ciphers.obj \
 	$(XMLSEC_NSS_INTDIR)\crypto.obj \
 	$(XMLSEC_NSS_INTDIR)\digests.obj \
 	$(XMLSEC_NSS_INTDIR)\hmac.obj \
-	$(XMLSEC_NSS_INTDIR)\pkikeys.obj\
-	$(XMLSEC_NSS_INTDIR)\signatures.obj\
+	$(XMLSEC_NSS_INTDIR)\keysstore.obj \
+	$(XMLSEC_NSS_INTDIR)\keytrans.obj \
+	$(XMLSEC_NSS_INTDIR)\kw_des.obj \
+	$(XMLSEC_NSS_INTDIR)\kw_aes.obj \
+	$(XMLSEC_NSS_INTDIR)\pbkdf2.obj \
+	$(XMLSEC_NSS_INTDIR)\pkikeys.obj \
+	$(XMLSEC_NSS_INTDIR)\signatures.obj \
+	$(XMLSEC_NSS_INTDIR)\strings.obj \
 	$(XMLSEC_NSS_INTDIR)\symkeys.obj \
-	$(XMLSEC_NSS_INTDIR)\x509.obj\
-	$(XMLSEC_NSS_INTDIR)\x509vfy.obj\
-	$(XMLSEC_NSS_INTDIR)\keysstore.obj\
-	$(XMLSEC_NSS_INTDIR)\keytrans.obj\
-	$(XMLSEC_NSS_INTDIR)\kw_des.obj\
-	$(XMLSEC_NSS_INTDIR)\kw_aes.obj\
-	$(XMLSEC_NSS_INTDIR)\strings.obj
+	$(XMLSEC_NSS_INTDIR)\x509.obj \
+	$(XMLSEC_NSS_INTDIR)\x509vfy.obj
 XMLSEC_NSS_OBJS_A = \
-	$(XMLSEC_NSS_INTDIR_A)\app.obj\
+	$(XMLSEC_NSS_INTDIR_A)\app.obj \
 	$(XMLSEC_NSS_INTDIR_A)\ciphers.obj \
 	$(XMLSEC_NSS_INTDIR_A)\crypto.obj \
 	$(XMLSEC_NSS_INTDIR_A)\digests.obj \
 	$(XMLSEC_NSS_INTDIR_A)\hmac.obj \
-	$(XMLSEC_NSS_INTDIR_A)\pkikeys.obj\
-	$(XMLSEC_NSS_INTDIR_A)\signatures.obj\
+	$(XMLSEC_NSS_INTDIR_A)\keysstore.obj \
+	$(XMLSEC_NSS_INTDIR_A)\kt_rsa.obj \
+	$(XMLSEC_NSS_INTDIR_A)\kw_des.obj \
+	$(XMLSEC_NSS_INTDIR_A)\kw_aes.obj \
+	$(XMLSEC_NSS_INTDIR_A)\pbkdf2.obj \
+	$(XMLSEC_NSS_INTDIR_A)\pkikeys.obj \
+	$(XMLSEC_NSS_INTDIR_A)\strings.obj \
+	$(XMLSEC_NSS_INTDIR_A)\signatures.obj \
 	$(XMLSEC_NSS_INTDIR_A)\symkeys.obj \
-	$(XMLSEC_NSS_INTDIR_A)\x509.obj\
-	$(XMLSEC_NSS_INTDIR_A)\x509vfy.obj\
-	$(XMLSEC_NSS_INTDIR_A)\keysstore.obj\
-	$(XMLSEC_NSS_INTDIR_A)\kt_rsa.obj\
-	$(XMLSEC_NSS_INTDIR_A)\kw_des.obj\
-	$(XMLSEC_NSS_INTDIR_A)\kw_aes.obj\
-	$(XMLSEC_NSS_INTDIR_A)\strings.obj
+	$(XMLSEC_NSS_INTDIR_A)\x509.obj \
+	$(XMLSEC_NSS_INTDIR_A)\x509vfy.obj
 
 XMLSEC_MSCRYPTO_OBJS = \
 	$(XMLSEC_MSCRYPTO_INTDIR)\app.obj\
