--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -322,6 +322,7 @@ XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\kt_rsa.obj \
 	$(XMLSEC_MSCNG_INTDIR)\kw_aes.obj \
 	$(XMLSEC_MSCNG_INTDIR)\kw_des.obj \
+	$(XMLSEC_MSCNG_INTDIR)\pbkdf2.obj \
 	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
 	$(XMLSEC_MSCNG_INTDIR)\keysstore.obj \
@@ -338,6 +339,7 @@ XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\kt_rsa.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\kw_aes.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\kw_des.obj \
+	$(XMLSEC_MSCNG_INTDIR_A)\pbkdf2.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\keysstore.obj \
