--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -320,13 +320,14 @@ XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\digests.obj\
 	$(XMLSEC_MSCNG_INTDIR)\hmac.obj \
 	$(XMLSEC_MSCNG_INTDIR)\symkeys.obj \
+	$(XMLSEC_MSCNG_INTDIR)\key_agrmnt.obj \
+	$(XMLSEC_MSCNG_INTDIR)\keysstore.obj \
 	$(XMLSEC_MSCNG_INTDIR)\kt_rsa.obj \
 	$(XMLSEC_MSCNG_INTDIR)\kw_aes.obj \
 	$(XMLSEC_MSCNG_INTDIR)\kw_des.obj \
 	$(XMLSEC_MSCNG_INTDIR)\pbkdf2.obj \
 	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
-	$(XMLSEC_MSCNG_INTDIR)\keysstore.obj \
 	$(XMLSEC_MSCNG_INTDIR)\x509.obj\
 	$(XMLSEC_MSCNG_INTDIR)\x509vfy.obj
 XMLSEC_MSCNG_OBJS_A = \
@@ -338,13 +339,14 @@ XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\digests.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\hmac.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\symkeys.obj \
+	$(XMLSEC_MSCNG_INTDIR_A)\key_agrmnt.obj \
+	$(XMLSEC_MSCNG_INTDIR_A)\keysstore.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\kt_rsa.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\kw_aes.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\kw_des.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\pbkdf2.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
-	$(XMLSEC_MSCNG_INTDIR_A)\keysstore.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\x509vfy.obj
 
